Made burritos in nature landing page

--- a/index.html
+++ b/index.html
@@ -8,25 +8,51 @@
   <body>
     <div id="ourpage">
       <div id="tophalf">
+        <div id="header">
+          <span id="logo">B</span>
+          <div class="header-right">
+            Find a Burrito
+          </div>
+            <div class="header-right">
+            Sign Up
+          </div>
+            <div class="header-right">
+            Sign In
+        </div>
+        </div>
         <div id="tagline">
           <h2>BURRITOS YOU'LL LOVE FROM</h2>
+          <div id="stripe"></div>
           <h1>PEOPLE YOU LOVE</h1>
         </div>
+          <button>Send a Burrito</button>
+          <div id="lastline">
+            (try al pastor)
+          </div>
       </div>
       <div id="bottomhalf">
         <div class="bottomthird" id="left">
-          Burritoful Cover Image
+          <img src="img/chalupa.png" alt="burrito" class="icons">
+          <div class="bottomheader">
+            Burritoful Cover Image
+          </div>
           Upload your own burrito image to make your nurrito more personal. Pick your favorite shot from the cart or choose a lovely taqueria photo.
         </div>
 
         <div class="bottomthird" id="middle">
-          Add Gifts From Anywhere
+          <img src="img/chalupa.png" alt="taco" class="icons">
+          <div class="bottomheader">
+            Add Gifts From Anywhere
+          </div>
           Our simple bookmarklet lets you add burritos from any local cart. You won't be locked into a single tamale lady, and you won't need to visit multiple stands.
         </div>
 
         <div class="bottomthird" id="right">
-          Categories For Your Lifestyle
-          Here's some more filler text. To be played with later. Green sauce!
+          <img src="img/chalupa.png" alt="chalupa" class="icons">
+          <div class="bottomheader">
+            Burrito Land
+          </div>
+          Here's some more filler text. To be played with later. Green sauce! Burritos are good for your health so eat as many as you can. A burrito a day keeps the doctor away!
         </div>
       </div>
     </div>
